<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/computer_pic"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/computer_score"
                android:gravity="center_horizontal"
                android:textSize="23sp"
                android:id="@+id/computer_score"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="v/s"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/faster_one"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/human_pic"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/your_score"
                android:id="@+id/your_score"
                android:textSize="23sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:src="@drawable/leftrock"
            android:id="@+id/computer_img"
            android:contentDescription="Image of computer input choose"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/rightrock"
            android:id="@+id/your_img"
            android:contentDescription="Image of user input score"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text=""
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:fontFamily="@font/frijole"
            android:id="@+id/resultDisplay"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_your_input"
            android:fontFamily="@font/miltonian"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25sp">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/rock"
                android:id="@+id/btn_rock"
                android:textSize="20sp"
                android:fontFamily="@font/akronim"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/paper"
                android:id="@+id/btn_paper"
                android:textSize="20sp"
                android:fontFamily="@font/akronim"/>
            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/scissor"
                android:id="@+id/btn_scissor"
                android:textSize="20sp"
                android:fontFamily="@font/akronim"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>